# adk-ralph

./: .env.example  .gitignore  Cargo.toml  README.md  design.md  package.json  prd.md  tasks.json  tsconfig.json
examples/: test_prd_agent.rs
hello-world/: Cargo.toml  design.md  prd.md  progress.json  tasks.json
hello-world-cli/: package.json  tsconfig.json
hello-world/hello-world/: Cargo.toml
hello-world/hello-world/tests/: cli.rs
hello-world/src/: main.rs
src/: index.test.ts  lib.rs  main.rs  orchestrator.rs  output.rs
src/agents/: architect_agent.rs  loop_agent.rs  mod.rs  prd_agent.rs
src/interactive/: orchestrator.rs  repl.rs
src/models/: config.rs
src/tools/: add_feature_tool.rs  file_tool.rs  git_tool.rs  progress_tool.rs  run_pipeline_tool.rs  run_project_tool.rs  task_tool.rs  test_tool.rs  time_tool.rs  web_search_tool.rs
tests/: architect_property_tests.proptest-regressions
